--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
 .display {
   padding: 5px;
   margin-bottom: 10px;
+  min-height: 32px;
+  width: 162px;
 
   background-color: #e9e9e9;
   border: 2px solid #939393;
@@ -31,7 +33,7 @@ body {
   text-align: right;
   font-size: 15px;
 
-  overflow: hidden;
+  overflow-wrap: anywhere;
 }
 
 .buttons {
